--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_EMAILJS_SERVICE_ID=service_njvcw7e
 VITE_EMAILJS_TEMPLATE_ID=template_tvx0iy4
 VITE_EMAILJS_PUBLIC_KEY=LA6UhsE_3E4sVPmgy
-VITE_CONTACT_TO_EMAIL=ashishphapale86@gmail.com
+VITE_CONTACT_TO_EMAIL=youremail@example.com
+
